<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:background="@drawable/image_round"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/detailAnimal"
            android:text="@string/animal"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailLocation"
            android:text="@string/location"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginBottom="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailTimestamp"
            android:text="@string/time"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnMarkVerified"
            android:text="@string/mark_as_verified"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:backgroundTint="#4CAF50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>
