<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/card_background"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/alertImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="10dp"
        android:scaleType="centerCrop"
        android:background="@drawable/image_round" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alertAnimal"
            android:text="@string/elephant"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/alertLocation"
            android:text="@string/madurai_forest_zone"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/alertTime"
            android:text="@string/_2025_10_08_10_45_am"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
