<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Title -->
        <TextView
            android:text="@string/manual_animal_detection"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Image Preview -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:background="@drawable/image_round"
            android:contentDescription="@string/image_preview"
            android:layout_marginBottom="15dp" />

        <!-- Upload Button -->
        <Button
            android:id="@+id/btnUpload"
            android:text="@string/upload_image"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:backgroundTint="#009688"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <!-- Bar Chart -->
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chartView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/chart_bg"
            android:padding="8dp" />
    </LinearLayout>
</ScrollView>
